--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 				<img src="./img/6.png" class="w-full bg-nav h-42 lg:h-72 object-cover">
 				<img src="./img/7.png" class="w-full bg-nav h-42 lg:h-72 object-cover">
 				<img src="./img/8.png" class="w-full bg-nav h-42 lg:h-72 object-cover">
-				<img src="./img/9.png" class="w-full hidden md:block bg-nav h-36 lg:h-72 object-cover">
-				<img src="./img/10.png" class="w-full hidden md:block bg-nav h-36 lg:h-72 object-cover">
-				<img src="./img/11.png" class="w-full hidden md:block bg-nav h-36 lg:h-72 object-cover">
-				<img src="./img/12.png" class="w-full hidden md:block bg-nav h-36 lg:h-72 object-cover">
-				<img src="./img/13.png" class="w-full hidden md:block bg-nav h-36 lg:h-72 object-cover">
+				<img src="./img/9.png" class="w-full bg-nav h-42 lg:h-72 object-cover">
+				<img src="./img/10.png" class="w-full bg-nav h-42 lg:h-72 object-cover">
+				<img src="./img/11.png" class="w-full bg-nav h-42 lg:h-72 object-cover">
+				<img src="./img/12.png" class="w-full bg-nav h-42 lg:h-72 object-cover">
+				<img src="./img/13.png" class="w-full bg-nav h-42 lg:h-72 object-cover">
 				<img src="./img/14.png" class="w-full hidden md:block md:col-span-2 lg:col-span-1 bg-nav h-36 lg:h-72 object-cover">
         	</div>
     	</section>
