--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 					<div class="mt-12">
 						<!-- Contact info -->
 						<p class="text-secondary">Mail Me at</p>
-						<a href="mailto:that.01.designer@gmail.com" class="text-secondary underline mt-3 block">That.1.Designer@gmail.com</a>
+						<a href="mailto:design.kushan@gmail.com" class="text-secondary underline mt-3 block">That.1.Designer@gmail.com</a>
 
 						<!-- Socials -->
 						<div class="flex mt-20 space-x-6">
